[project]
name = "lastran-workshop-gis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "branca>=0.8.2",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "jupyterlab>=4.5.7",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.9",
    "osmnx>=2.1.0",
    "pandas>=3.0.3",
]
